@@ -616,6 +616,13 @@ option with the output file options.
 .B .wve
 Psion 8-bit A-law. Used on older Psion PDAs.
 .TP 10
+.B .xa
+Maxis XA files
+.br
+These are 16-bit ADPCM sound files used by Maxis games.  Writing .xa files is
+currently not supported, although adding write support should not be very
+difficult.
+.TP 10
 .B .raw
 Raw files (no header).
 The sample rate, size (byte, word, etc), 
